# akademie-fastapi-solution

./: .gitignore  README.md  pyproject.toml
diskuze/: __init__.py  dependencies.py  models.py  schema.py
diskuze/dependencies/: auth.py  config.py  context.py  data_load.py  database.py
queries/: comments.graphql  create_comment.graphql  discussion_comments.graphql
utils/: db.py
utils/wrk/: request.lua
